force-app/main/default/objects/FOC_Condition__c/FOC_Condition__c.object-meta.xml
<CustomObject>
    <label>FOC Condition</label>
    <nameField>
        <label>FOC Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FOC Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>