force-app/main/default/objects/FOC_Condition__c/fields/FOC_Quantity__c.field-meta.xml
<CustomField>
    <fullName>FOC_Quantity__c</fullName>
    <label>FOC Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>