force-app/main/default/objects/FOC_Condition__c/fields/Free_Item_Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Free_Item_Beneficiary__c</fullName>
    <label>Free Item Beneficiary</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retailer</fullName>
                <default>true</default>
                <label>Retailer</label>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>