force-app/main/default/objects/FOC_Condition__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>FOC Conditions</relationshipLabel>
    <relationshipName>FOC_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>