force-app/main/default/objects/FOC_Condition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>FOC_Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>